started the game

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             </ol>
 
         </ul>
+
+        <button id="game_start">
+            👻STaRt tHE sPoOKy hAlLoWEeN GAmE👻
+        </button>
         
 
     </body>
