finished 3.2 except optional

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
         <button id="game_start">
             👻STaRt tHE sPoOKy hAlLoWEeN GAmE👻
         </button>
+        <br>
+        <br>
+        <br>
+        <button id="menu_button">
+            Open the menu
+        </button>
         
 
     </body>
