unit 3.3 (else) done

--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
         <button id="menu_button">
             Open the menu
         </button>
+
+        <br>
+        <br>
+        <br>
+        
+        <button id="guess">
+            Guess 1-10
+        </button>
         
 
     </body>
